Working version, can't browse DB yet though